# cpp-demo

./: CMakeLists.txt
C++11/: main.cpp
render/: CMakeLists.txt  main.cpp
sdl2/: CMakeLists.txt  cleanup.hpp  hello-world.hpp  hello-world2.hpp  main.cpp  res_path.h
